swagger api documentation done for the admin dashboard api
